JBTM-3510 Replace new Integer(int) with valueOf(int) and also for other Primitive Data Types